[package]
name = "ash-test"
version = "0.1.0"
authors = ["Anton Vladimirov <styleex@inbox.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
winit = "0.25.0"
num = "0.4"
memoffset = "0.6.4"
cgmath = "0.18.0"
image = "0.23"
tobj = "3.0"
spirv-reflect = "0.2.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17.0"
cocoa = "0.18.4"
objc  = "0.2.5"
