[workspace]
members = [
    "render_env",
    "example"
]

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.tobj]
opt-level = 3

[profile.dev.package.cgmath]
opt-level = 3

[profile.dev.package.num]
opt-level = 3

[profile.dev.package.spirv-reflect]
opt-level = 3

[profile.dev.package.winit]
opt-level = 3

[profile.dev]
opt-level = 1
