[workspace]
members = [
    "render_env",
    "example"
]

# If setting
#   [profile.dev.package."*"]
#   opt-level = 3
# program in debug mode is segfaulted.

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.tobj]
opt-level = 3

[profile.dev.package.cgmath]
opt-level = 3

[profile.dev.package.num]
opt-level = 3

[profile.dev.package.spirv-reflect]
opt-level = 3

[profile.dev.package.winit]
opt-level = 3

[profile.dev.package.ash]
opt-level = 3

[profile.dev.package.egui]
opt-level = 3

[profile.dev.package.memoffset]
opt-level = 3


[profile.dev]
opt-level = 1
